--- a/Basics/1. 프로그래밍 개념.md
+++ b/Basics/1. 프로그래밍 개념.md
@@ -72,3 +72,32 @@ let a: [i32; 5] = [1, 2, 3, 4, 5];
 let first = a[0];
 let second = a[1];
 ```
+
+### 1-3. 함수
+- 함수 원형에는 각 매개변수의 타입을 반드시 선언
+- 함수의 정의에 타입 명시를 강제하면 이 함수를 다른 코드에서 사용할 때 의도한 타입을 컴파일러가 추측하지 않아도 됨
+- 또한 기대한 타입이 무엇인지 알고 있으면 더욱 유용한 에러 메시지 제공 가능
+
+### 1-4. 제어 흐름문
+- let 구문에서도 if를 사용할 수 있음
+- loop 키워드로 무한 반복하기
+```rust
+fn main() {
+  let condition = true;
+  let number = if condition { 5 } else { 6 };
+}
+```
+- loop의 사례 중 하나는 어떤 스레드가 실행 완료되었는지 검사하는 등 실패할지도 모르는 연산을 재시도할 때
+- 따라서 해당 연산의 결과를 이후의 코드에 전달하고 싶을때도 있는데, 이 때는 break 표현식 뒤에 반환하고자 하는 값을 넣으면 됨
+```rust
+fn main() {
+  let mut counter = 0;
+  let result = loop {
+    counter += 1;
+
+    if counter == 10 {
+      break counter * 2;
+    }
+  }
+}
+```
